--- a/src/components/Sections/Section.module.css
+++ b/src/components/Sections/Section.module.css
@@ -81,3 +81,29 @@
   font-weight: 500;
   color: var(--c-primary);
 }
+
+/* TODO */
+.carret {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: inline-block;
+  width: 60px;
+  height: 50px;
+  border-bottom: solid 50px var(--c-light);
+  border-left: solid 30px transparent;
+  border-right: solid 30px transparent;
+
+  &::before {
+    content: '';
+    display: inline-block;
+    border: 1px solid var(--c-secondary);
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    padding: 3px;
+    position: relative;
+    bottom: -14px;
+    left: -5px;
+  }
+}
