--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -6,9 +6,12 @@
   display: inline-flex;
   align-items: center;
   position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
 
   a {
     text-decoration: underline;
+    margin: 0 5px;
   }
 }
 
@@ -18,7 +21,7 @@
   height: 16px;
   border-radius: 10px;
   box-shadow: 0px 1px 1px var(--c-checkbox-shadow);
-  margin-right: 12px;
+  margin-right: 7px;
   outline: 0;
   border: 0;
   &:checked {
