--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,15 +1,52 @@
 .nav {
+  display: flex;
+
+  & > li {
+    position: relative;
+    line-height: var(--header-height);
+
+    &:hover ul {
+      height: auto;
+      visibility: visible;
+    }
+  }
+
+  & > li + li {
+    margin-left: 41px;
+  }
+
   a {
     font-weight: 500;
     position: relative;
+
     svg {
       vertical-align: middle;
       font-size: var(--f-small);
       margin-left: 4px;
     }
   }
-  a + a {
-    margin-left: 41px;
+}
+
+.dropdown {
+  height: 0;
+  visibility: hidden;
+  position: absolute;
+  box-shadow: 0px 1px 2px #00000014;
+  border: 1px solid #d8dce6;
+  border-radius: 4px;
+  background: var(--c-white);
+  z-index: 999;
+  color: var(--c-black);
+
+  li {
+    line-height: initial;
+
+    a {
+      font-size: var(--f-small);
+      display: block;
+      padding: 10px;
+      width: 150px;
+    }
   }
 }
 
@@ -21,6 +58,17 @@
   transform: translateX(-50%);
 }
 .footer {
+  li {
+    line-height: initial;
+    ul {
+      bottom: 100%;
+    }
+  }
+
+  li + li {
+    margin-left: 25px;
+  }
+
   a {
     font-size: var(--f-small);
     font-weight: 400;
