--- a/src/components/Sections/Blog/Blog.module.css
+++ b/src/components/Sections/Blog/Blog.module.css
@@ -31,13 +31,15 @@
   margin-bottom: 30px;
   margin-top: 35px;
 }
-
+.wrapper {
+  padding: 3px;
+}
 .card {
   width: 276px;
-  height: 303px;
+  /* height: 303px; */
   border-radius: 16px;
   background-color: var(--c-white);
-  box-shadow: 0 0 2px var(--c-gray);
+  box-shadow: 0 0px 5px 1px var(--c-input-border);
 }
 .header {
   position: relative;
@@ -52,6 +54,7 @@
   img {
     width: 100%;
     height: 200px;
+    border-radius: 16px 16px 0 0;
   }
 }
 .back {
@@ -65,7 +68,7 @@
   justify-content: center;
   background-color: var(--c-secondary);
   opacity: 0;
-  z-index: 999;
+  z-index: 9;
   font-size: var(--f-big-title);
   color: var(--c-white);
 }
@@ -75,9 +78,10 @@
   left: 11px;
   border-radius: 0;
   font-weight: 500;
+  z-index: 10;
 }
 .cardBody {
-  /* padding: 15px; */
+  padding: 15px;
 }
 
 .date {
