--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -3,4 +3,11 @@
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media (--d) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
